tests/neg/parser-stability-1.scala
object x0 {
x1 match  // error
def this // error
